[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciona-atoms-robotics"
version = "0.1.0"
description = "Robotics provider repo for sciona.atoms.* and sciona.probes.*"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "sciona",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
